--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ footer {
 
 .mainCategoria {
   width: 100%;
-  height: 200px;
+  height: 160px;
   text-align: center;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
@@ -199,13 +199,13 @@ footer {
   gap: 0.625rem; }
   .mainCategoria li {
     list-style: none;
-    gap: 20px;
-    width: 75%;
-    height: 150px; }
+    gap: 5px;
+    width: 60%;
+    height: 110px; }
     .mainCategoria li img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: fill;
       border-radius: 70%; }
       .mainCategoria li img:hover {
         box-shadow: 0px 0px .625rem #2D4262; }
