--- a/scss/layout/_main-categorias.scss
+++ b/scss/layout/_main-categorias.scss
@@ -1,17 +1,17 @@
 .mainCategoria{
     width: 100%;
-    height: 200px;
+    height: 160px;
     text-align: center;
     @include grid-categoria(repeat(10, 1fr), center, center, .625rem);
     li{
         list-style: none;
-        gap: 20px;
-        width: 75%;
-        height: 150px;
+        gap: 5px;
+        width: 60%;
+        height: 110px;
         img{
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: fill;
             border-radius: 70%;
             &:hover{
                 box-shadow: 0px 0px .625rem #2D4262;
