--- a/css/style.css
+++ b/css/style.css
@@ -190,8 +190,9 @@ footer {
 
 .mainCategoria {
   width: 100%;
-  height: 160px;
+  height: 12vh;
   text-align: center;
+  padding-top: 2%;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   justify-content: center;
@@ -200,11 +201,11 @@ footer {
   .mainCategoria li {
     list-style: none;
     gap: 5px;
-    width: 60%;
-    height: 110px; }
+    width: 70%;
+    height: 100%; }
     .mainCategoria li img {
       width: 100%;
-      height: 100%;
+      height: 75%;
       object-fit: fill;
       border-radius: 70%; }
       .mainCategoria li img:hover {
@@ -262,9 +263,13 @@ footer {
       width: 100%;
       height: 21.875rem;
       object-fit: contain; }
-    .listaArticulos div li button:hover {
-      list-style: none;
-      box-shadow: 0px 0px .625rem #2D4262; }
+  .listaArticulos div p {
+    padding-right: 2%; }
+    .listaArticulos div p button {
+      background-color: #FFFAF5;
+      border: none; }
+      .listaArticulos div p button:hover {
+        box-shadow: 0px 0px .625rem #2D4262; }
 
 .sucursales {
   display: flex;
@@ -468,9 +473,10 @@ footer {
   .navtop li a {
     font-size: 16px; }
   .mainCategoria {
-    height: 140px; }
+    height: 10vh;
+    padding-bottom: 2%; }
     .mainCategoria li {
-      height: 90px;
+      height: 90%;
       font-size: 11px; }
   .listaArticulos {
     grid-template-columns: repeat(3, 1fr);
@@ -478,6 +484,9 @@ footer {
     padding-bottom: 50px;
     gap: 10px;
     font-size: 11px; }
+    .listaArticulos div p img {
+      width: 12px;
+      height: 12px; }
   .navbottom {
     padding-top: 20px; }
     .navbottom h2 {
@@ -619,12 +628,13 @@ footer {
     .navtop li a {
       font-size: 11px; }
   .mainCategoria {
-    height: 70px;
+    height: 6vh;
     grid-template-columns: repeat(8, 1fr);
     gap: .9375rem; }
     .mainCategoria li {
-      height: 50px;
-      font-size: 11px; }
+      height: 90%;
+      font-size: 9px;
+      text-align: center; }
   .vertodo {
     grid-column-start: 2;
     grid-column-end: 3;
@@ -713,7 +723,7 @@ footer {
     justify-content: space-between;
     padding-left: 1.25rem; }
     .sucursales iframe {
-      width: 380px;
+      width: 100%;
       height: 18.75rem;
       padding: 5%; }
     .sucursales h2 {
