--- a/scss/layout/_main-categorias.scss
+++ b/scss/layout/_main-categorias.scss
@@ -1,16 +1,17 @@
 .mainCategoria{
     width: 100%;
-    height: 160px;
+    height: 12vh;
     text-align: center;
+    padding-top: 2%;
     @include grid-categoria(repeat(10, 1fr), center, center, .625rem);
     li{
         list-style: none;
         gap: 5px;
-        width: 60%;
-        height: 110px;
+        width: 70%;
+        height: 100%;
         img{
             width: 100%;
-            height: 100%;
+            height: 75%;
             object-fit: fill;
             border-radius: 70%;
             &:hover{
@@ -47,15 +48,23 @@
     div{
         li{
             list-style: none;
-        img{
+            img{
                 width: 100%;
                 height: 21.875rem;
                 object-fit: contain;
-            }
-        button:hover{
-            list-style: none;
-            box-shadow: 0px 0px .625rem #2D4262; 
+                }
         }
+        p{
+            padding-right: 2%;
+            button{
+                background-color: $bg-body;
+                border: none;
+                    &:hover{
+                        box-shadow: 0px 0px .625rem #2D4262;
+                }
+            }
         }
     }
 }
+
+
