--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 header {
   background-color: #2D4262;
   width: 100%;
+  height: 7vh;
   position: sticky;
   top: 0; }
 
@@ -42,6 +43,30 @@ header {
     width: 100%;
     height: 1200px;
     object-fit: cover; }
+
+.text-focus-in {
+  -webkit-animation: text-focus-in 2s both;
+  animation: text-focus-in 2s both; }
+
+@-webkit-keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+    filter: blur(12px);
+    opacity: 0; }
+  100% {
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
+    opacity: 1; } }
+
+@keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+    filter: blur(12px);
+    opacity: 0; }
+  100% {
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
+    opacity: 1; } }
 
 .buttonPrincipal, .categoria1 button, .categoria2 button, .categoria4 button, .categoria3 button {
   font-size: 20px;
@@ -263,6 +288,8 @@ footer {
       width: 100%;
       height: 21.875rem;
       object-fit: contain; }
+      .listaArticulos div li img:hover {
+        transform: scale(1.03); }
   .listaArticulos div p {
     padding-right: 2%; }
     .listaArticulos div p button {
