--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,6 +1,7 @@
 header{
     background-color: $bg-nav;
-    width: 100%;    
+    width: 100%;
+    height: 7vh;    
     position: sticky;
     top: 0;
 }
