--- a/scss/layout/_main-categorias.scss
+++ b/scss/layout/_main-categorias.scss
@@ -52,7 +52,10 @@
                 width: 100%;
                 height: 21.875rem;
                 object-fit: contain;
+                &:hover{
+                    transform: scale(1.03)
                 }
+            }
         }
         p{
             padding-right: 2%;
