--- a/scss/layout/_main-index.scss
+++ b/scss/layout/_main-index.scss
@@ -27,6 +27,35 @@
         object-fit: cover;
     }
 }
+.text-focus-in {
+	-webkit-animation: text-focus-in 2s both;
+	animation: text-focus-in 2s both;
+}
+@-webkit-keyframes text-focus-in {
+    0% {
+        -webkit-filter: blur(12px);
+        filter: blur(12px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-filter: blur(0px);
+        filter: blur(0px);
+        opacity: 1;
+    }
+}
+@keyframes text-focus-in {
+    0% {
+        -webkit-filter: blur(12px);
+        filter: blur(12px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-filter: blur(0px);
+        filter: blur(0px);
+        opacity: 1;
+    }
+}
+
 .buttonPrincipal{
     font-size:  map-get($font-size, md);
     font-family: $font-texto;
@@ -73,7 +102,7 @@
         width: 100%;
         height: 600px;
         object-fit: cover;
-        }
+    }
 }
 .categoria1b{
     grid-column-start: 6;
