--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -2,7 +2,7 @@
     @include flex(row, flex-start);
     align-items: center;
     list-style: none;
-    height: 70px;
+    height: 7vh;
     gap: 1.875rem;
     padding-left: 1.25rem;
     li{
