--- a/scss/layout/_main-categorias.scss
+++ b/scss/layout/_main-categorias.scss
@@ -1,18 +1,18 @@
 .mainCategoria{
     width: 100%;
-    height: 12vh;
+    height: 20vh;
     text-align: center;
     padding-top: 2%;
     @include grid-categoria(repeat(10, 1fr), center, center, .625rem);
     li{
         list-style: none;
         gap: 5px;
-        width: 70%;
+        width: 100%;
         height: 100%;
         img{
             width: 100%;
-            height: 75%;
-            object-fit: fill;
+            height: 80%;
+            object-fit: cover;
             border-radius: 70%;
             &:hover{
                 box-shadow: 0px 0px .625rem #2D4262;
