--- a/scss/layout/_main-categorias.scss
+++ b/scss/layout/_main-categorias.scss
@@ -1,9 +1,9 @@
 .mainCategoria{
     width: 100%;
-    height: 20vh;
+    height: 25vh;
     text-align: center;
     padding-top: 2%;
-    @include grid-categoria(repeat(10, 1fr), center, center, .625rem);
+    @include grid-categoria(repeat(10, 1fr), start, start, .625rem);
     li{
         list-style: none;
         gap: 5px;
