--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -3,7 +3,7 @@
     align-items: center;
     list-style: none;
     height: 7vh;
-    gap: 1.875rem;
+    gap: 25px;
     padding-left: 1.25rem;
     li{
         a{
