--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -4,6 +4,7 @@ header{
     height: 7vh;    
     position: sticky;
     top: 0;
+    z-index: 20;
 }
 .btn-secondary{
     background-color: $bg-nav;
