page-consultas-responsive

--- a/css/style.css
+++ b/css/style.css
@@ -379,16 +379,12 @@ footer {
 
 .consultas {
   font-family: sans-serif;
-  height: 880px;
   position: relative; }
   .consultas .responsive-container-block {
     min-height: 100px;
-    height: fit-content;
+    height: 700px;
     width: 100%;
-    padding-top: 20px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
+    padding: 10px;
     display: flex;
     flex-wrap: wrap;
     margin-top: 0px;
@@ -399,15 +395,17 @@ footer {
     align-content: center;
     justify-content: center; }
   .consultas .responsive-container-block.bigContainer {
-    padding: 30px; }
+    padding: 20px;
+    height: 100%; }
   .consultas .responsive-container-block.Container {
     max-width: 1320px;
     margin-top: 50px;
     margin-right: auto;
     margin-bottom: 50px;
     margin-left: auto; }
-  .consultas .responsive-cell-block {
-    min-height: 75px; }
+
+.responsive-cell-block.S {
+  width: 50%; }
 
 .mainImg {
   width: 100%;
@@ -415,10 +413,12 @@ footer {
   height: 100%; }
 
 .responsive-cell-block.M {
+  width: 50%;
+  height: 100%;
   background-color: #333333;
   padding-top: 30px;
   padding-right: 50px;
-  padding-bottom: 30px;
+  padding-bottom: 10px;
   padding-left: 50px; }
   .responsive-cell-block.M p {
     margin-top: 0px;
@@ -489,7 +489,7 @@ footer {
   width: 100%;
   margin-top: 0px;
   margin-right: 0px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   margin-left: 0px; }
   .messageArea textarea {
     width: 100%;
@@ -500,7 +500,8 @@ footer {
     padding-top: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
-    padding-left: 10px; }
+    padding-left: 10px;
+    height: 100%; }
   .messageArea p {
     margin-top: 0px;
     margin-right: 0px;
@@ -510,8 +511,8 @@ footer {
 
 .datosContacto {
   position: absolute;
-  bottom: 215px;
-  right: 150px;
+  bottom: 60px;
+  right: 55px;
   background: #50505a;
   color: #fff;
   width: 320px;
@@ -521,23 +522,6 @@ footer {
   box-shadow: 10px 10px 40px -14px #000; }
   .datosContacto span {
     margin: 0 5px 0 15px; }
-
-@media (max-width: 500px) {
-  .responsive-container-block.bigContainer {
-    padding-top: 10px;
-    padding-right: 20px;
-    padding-bottom: 10px;
-    padding-left: 20px; }
-  .consultas .responsive-container-block.Container {
-    padding-top: 0px;
-    padding-right: 0px;
-    padding-bottom: 0px;
-    padding-left: 0px; }
-  .consultas .responsive-cell-block.M {
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px; } }
 
 .bg-body-navbar {
   background-color: #2D4262; }
@@ -674,9 +658,11 @@ footer {
   .sucursales h1 {
     font-size: 30px; }
   .consultas {
-    height: 1500px; }
+    height: 1500px;
+    padding-bottom: 5%; }
   .responsive-cell-block.M {
-    width: 600px; }
+    width: 80%;
+    height: 100%; }
   .firstRow {
     flex-direction: column; }
     .firstRow div input {
@@ -686,11 +672,17 @@ footer {
       margin-bottom: 10px;
       margin-left: 0px; }
   .responsive-cell-block.S {
-    width: 600px; }
+    width: 80%;
+    height: 100%; }
   .datosContacto {
     position: absolute;
-    bottom: 138px;
-    right: 40px; } }
+    bottom: 60px;
+    right: 70px; }
+  .messageArea {
+    margin-bottom: 10px;
+    font-size: 18px; }
+    .messageArea textarea {
+      height: 85%; } }
 
 @media (max-width: 426px) {
   header {
@@ -937,4 +929,28 @@ footer {
   .nosotros p {
     font-size: 11px; }
   .videocorp iframe {
-    padding: 5%; } }
+    padding: 5%; }
+  .formTable p {
+    font-size: 11px; }
+  .formTable a {
+    font-size: 11px; }
+  .responsive-cell-block.M {
+    width: 100%;
+    height: 95%;
+    padding-top: 10px;
+    padding-right: 20px;
+    padding-left: 20px; }
+    .responsive-cell-block.M .titulo-caja.descripcion {
+      font-size: 20px;
+      margin-bottom: 10px; }
+  .responsive-cell-block.S {
+    width: 100%; }
+  .datosContacto {
+    position: absolute;
+    bottom: 65px;
+    right: 50px; }
+  .messageArea {
+    margin-bottom: -75px; }
+    .messageArea textarea {
+      font-size: 18px;
+      height: 70%; } }
