--- a/scss/layout/media/_media426.scss
+++ b/scss/layout/media/_media426.scss
@@ -327,4 +327,30 @@
             height: 70%;
         }
     }
+    .error404{
+        height: 825px;
+        h1{
+            font-size: 40px;
+        }
+        h2{
+            font-size: 25px;
+        }
+        div{
+            img{
+                margin-left: 10%;
+                width: 80%;
+            }
+        }
+        ul{
+            h3{
+                font-size: 15px;
+            }
+            div{
+                margin-left: 37%;
+                li{
+                    font-size: 12px;
+                }
+                }
+            }
+        }
 }
