--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,7 @@
 @import "./layout/main-sucursales";
 @import "./layout/main-nosotros";
 @import "./layout/main-consultas";
-
+@import "./layout/error404";
 @import "./components/bootstrap";
 
 @import "./layout/media/media768";
