--- a/scss/layout/media/_media768.scss
+++ b/scss/layout/media/_media768.scss
@@ -219,4 +219,16 @@
             height: 85%
         }
     }
+    .error404{
+            div{
+            img{
+                margin-left: 23%;
+            }
+        }
+        ul{
+            div{
+                margin-left: 36%;
+                }
+            }
+        }
 }
