--- a/scss/layout/_error404.scss
+++ b/scss/layout/_error404.scss
@@ -1,5 +1,5 @@
 .error404{
-    padding-top: 5%;
+    padding-top: 3%;
     h1{
         font-size: 80px;
         color: $bg-nav;
@@ -11,9 +11,10 @@
     }
     div{
         img{
-            margin-left: 33%;
-            margin-bottom: 10%;
-        }
+        display: block;
+        margin: auto;
+        margin-bottom: 5%;
+    }
     }
     ul{
         h3{
@@ -21,15 +22,13 @@
             text-align: center;
         }
         div{
-            margin-left: 40%;
             margin-top: 20px;
             margin-bottom: 50px;
-            line-height: 1.5;
+            line-height: 1.5;                
             li{
                 font-size: 25px;
-                text-align: justify;
-            }
+                text-align: center;
             }
         }
     }
-
+}
