--- a/scss/layout/_main-categorias.scss
+++ b/scss/layout/_main-categorias.scss
@@ -1,6 +1,6 @@
 .mainCategoria{
     width: 100%;
-    height: 25vh;
+    height: auto;
     text-align: center;
     padding-top: 2%;
     @include grid-categoria(repeat(10, 1fr), start, start, .625rem);
@@ -42,7 +42,7 @@
 .listaArticulos{
     width: 100%;
     @include grid-categoria(repeat(4,1fr), none, none, 1.875rem);
-    padding-top: 70px;
+    padding-top: 30px;
     padding-bottom: 70px;
     text-align: center;
     div{
