--- a/scss/layout/media/_media426.scss
+++ b/scss/layout/media/_media426.scss
@@ -189,7 +189,7 @@
     }
     .listaArticulos{
         grid-template-columns: repeat(1,1fr);
-        padding-top: 20px;
+        padding-top: 0px;
         padding-bottom: 20px;
         gap: 20px;
         div{
@@ -328,7 +328,8 @@
         }
     }
     .error404{
-        height: 825px;
+        height: 920px;
+        margin-top: 5%;
         h1{
             font-size: 40px;
         }
@@ -337,8 +338,7 @@
         }
         div{
             img{
-                margin-left: 10%;
-                width: 80%;
+                margin-bottom: 20px;
             }
         }
         ul{
@@ -346,7 +346,6 @@
                 font-size: 15px;
             }
             div{
-                margin-left: 37%;
                 li{
                     font-size: 12px;
                 }
