--- a/scss/layout/_main-categorias.scss
+++ b/scss/layout/_main-categorias.scss
@@ -42,8 +42,8 @@
 .listaArticulos{
     width: 100%;
     @include grid-categoria(repeat(4,1fr), none, none, 1.875rem);
-    padding-top: 30px;
-    padding-bottom: 70px;
+    margin-top: 3%;
+    padding-bottom: 10%;
     text-align: center;
     div{
         li{
